Analytics for estancia and empleado added to schema
